--- a/frontend/index.html
+++ b/frontend/index.html
@@ -140,6 +140,14 @@
             </a>
           </li>
           <li class="nav-item">
+            <a class="nav-link position-relative" href="#cart" onclick="showCart(); return false;" style="cursor: pointer;">
+              <i class="bi bi-cart3 fs-5"></i> Carrito
+              <span id="cartBadge" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" style="display: none;">
+                0
+              </span>
+            </a>
+          </li>
+          <li class="nav-item">
             <span class="nav-link">
               <i class="bi bi-person-circle"></i> <span id="userName">Usuario Demo</span>
             </span>
@@ -296,10 +304,14 @@
   <script src="js/catalog.js"></script>
   <script src="js/cart.js"></script>
   <script src="js/orders.js"></script>
+  <script src="js/cart-view.js"></script>
   
   <script>
     // Initialize app
     document.addEventListener('DOMContentLoaded', function() {
+      // Cargar carrito desde localStorage
+      loadCartFromLocalStorage();
+      
       // Set user name
       document.getElementById('userName').textContent = CURRENT_USER.name;
       
@@ -332,5 +344,38 @@
       });
     });
   </script>
+
+    <!-- Cart Modal -->
+  <div class="modal fade" id="cartModal" tabindex="-1">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">
+            <i class="bi bi-cart3"></i> Mi Carrito de Compras
+          </h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+        <div class="modal-body" id="cartItemsContainer" style="max-height: 60vh; overflow-y: auto;">
+          <!-- Cart items will be loaded here -->
+        </div>
+        <div class="modal-footer">
+          <div class="flex-grow-1">
+            <button type="button" class="btn btn-outline-danger" onclick="if(confirm('¿Vaciar carrito?')) { clearCart(); loadCart(); }">
+              <i class="bi bi-trash"></i> Vaciar Carrito
+            </button>
+          </div>
+          <div class="text-end me-3">
+            <h5 class="mb-0">Total: <span id="cartTotal" class="text-primary">$0.00</span></h5>
+          </div>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+            <i class="bi bi-x-circle"></i> Seguir Comprando
+          </button>
+          <button type="button" class="btn btn-success" id="checkoutBtn" onclick="checkout()">
+            <i class="bi bi-credit-card"></i> Proceder al Pago
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
